feat: Implementing auth
